Add support for multiple chromosomes in entity