@@ -33,20 +33,20 @@ public class HomogeneousCrosserTest {
         Mockito.when(rnd.nextInt(anyInt())).thenReturn(0, 1, 0, 0, 1);
 
         //when
-        List<Entity> solutionList = new ArrayList<>(Arrays.asList(new Entity(0, 0, chrom1),
-                new Entity(0, 0, chrom2)));
+        List<Entity> solutionList = new ArrayList<>(Arrays.asList(new Entity(0, 0, List.of(chrom1)),
+                new Entity(0, 0, List.of(chrom2))));
         crosser.cross(solutionList, 1.0);
 
         //then
         Entity solution1 = solutionList.get(0);
         Entity solution2 = solutionList.get(1);
 
-        Assert.assertSame(0, (int) solution1.getChromosome()[0]);
-        Assert.assertSame(0, (int) solution1.getChromosome()[1]);
-        Assert.assertSame(1, (int) solution1.getChromosome()[2]);
+        Assert.assertSame(0, (int) solution1.getChromosomesBytes().get(0)[0]);
+        Assert.assertSame(0, (int) solution1.getChromosomesBytes().get(0)[1]);
+        Assert.assertSame(1, (int) solution1.getChromosomesBytes().get(0)[2]);
 
-        Assert.assertSame(1, (int) solution2.getChromosome()[0]);
-        Assert.assertSame(1, (int) solution2.getChromosome()[1]);
-        Assert.assertSame(0, (int) solution2.getChromosome()[2]);
+        Assert.assertSame(1, (int) solution2.getChromosomesBytes().get(0)[0]);
+        Assert.assertSame(1, (int) solution2.getChromosomesBytes().get(0)[1]);
+        Assert.assertSame(0, (int) solution2.getChromosomesBytes().get(0)[2]);
     }
 }
