@@ -35,23 +35,23 @@ public class OnePointCrosserTest {
         Mockito.when(rnd.nextInt(anyInt())).thenReturn(0, 1, 2);
 
         //when
-        List<Entity> solutionList = new ArrayList<>(Arrays.asList(new Entity(0, 0, chrom1),
-                new Entity(0, 0, chrom2)));
+        List<Entity> solutionList = new ArrayList<>(Arrays.asList(new Entity(0, 0, List.of(chrom1)),
+                new Entity(0, 0, List.of(chrom2))));
         crosser.cross(solutionList, 1.0);
 
         //then
         Entity solution1 = solutionList.get(0);
         Entity solution2 = solutionList.get(1);
 
-        Assert.assertSame(0, (int) solution1.getChromosome()[0]);
-        Assert.assertSame(0, (int) solution1.getChromosome()[1]);
-        Assert.assertSame(1, (int) solution1.getChromosome()[2]);
-        Assert.assertSame(1, (int) solution1.getChromosome()[3]);
+        Assert.assertSame(0, (int) solution1.getChromosomesBytes().get(0)[0]);
+        Assert.assertSame(0, (int) solution1.getChromosomesBytes().get(0)[1]);
+        Assert.assertSame(1, (int) solution1.getChromosomesBytes().get(0)[2]);
+        Assert.assertSame(1, (int) solution1.getChromosomesBytes().get(0)[3]);
 
-        Assert.assertSame(1, (int) solution2.getChromosome()[0]);
-        Assert.assertSame(1, (int) solution2.getChromosome()[1]);
-        Assert.assertSame(0, (int) solution2.getChromosome()[2]);
-        Assert.assertSame(0, (int) solution2.getChromosome()[3]);
+        Assert.assertSame(1, (int) solution2.getChromosomesBytes().get(0)[0]);
+        Assert.assertSame(1, (int) solution2.getChromosomesBytes().get(0)[1]);
+        Assert.assertSame(0, (int) solution2.getChromosomesBytes().get(0)[2]);
+        Assert.assertSame(0, (int) solution2.getChromosomesBytes().get(0)[3]);
     }
 
     @Test
@@ -65,9 +65,9 @@ public class OnePointCrosserTest {
 
         //when
         List<Entity> solutionList = new ArrayList<>(Arrays.asList(
-                new Entity(0, 0, chrom1),
-                new Entity(0, 0, chrom2),
-                new Entity(0, 0, chrom3))
+                new Entity(0, 0, List.of(chrom1)),
+                new Entity(0, 0, List.of(chrom2)),
+                new Entity(0, 0, List.of(chrom3)))
         );
         crosser.cross(solutionList, 1.0);
 
@@ -76,19 +76,19 @@ public class OnePointCrosserTest {
         Entity solution2 = solutionList.get(1);
         Entity solution3 = solutionList.get(2);
 
-        Assert.assertSame(0, (int) solution1.getChromosome()[0]);
-        Assert.assertSame(0, (int) solution1.getChromosome()[1]);
-        Assert.assertSame(1, (int) solution1.getChromosome()[2]);
-        Assert.assertSame(1, (int) solution1.getChromosome()[3]);
+        Assert.assertSame(0, (int) solution1.getChromosomesBytes().get(0)[0]);
+        Assert.assertSame(0, (int) solution1.getChromosomesBytes().get(0)[1]);
+        Assert.assertSame(1, (int) solution1.getChromosomesBytes().get(0)[2]);
+        Assert.assertSame(1, (int) solution1.getChromosomesBytes().get(0)[3]);
 
-        Assert.assertSame(1, (int) solution2.getChromosome()[0]);
-        Assert.assertSame(1, (int) solution2.getChromosome()[1]);
-        Assert.assertSame(0, (int) solution2.getChromosome()[2]);
-        Assert.assertSame(0, (int) solution2.getChromosome()[3]);
+        Assert.assertSame(1, (int) solution2.getChromosomesBytes().get(0)[0]);
+        Assert.assertSame(1, (int) solution2.getChromosomesBytes().get(0)[1]);
+        Assert.assertSame(0, (int) solution2.getChromosomesBytes().get(0)[2]);
+        Assert.assertSame(0, (int) solution2.getChromosomesBytes().get(0)[3]);
 
-        Assert.assertSame(0, (int) solution3.getChromosome()[0]);
-        Assert.assertSame(0, (int) solution3.getChromosome()[1]);
-        Assert.assertSame(1, (int) solution3.getChromosome()[2]);
-        Assert.assertSame(0, (int) solution3.getChromosome()[3]);
+        Assert.assertSame(0, (int) solution3.getChromosomesBytes().get(0)[0]);
+        Assert.assertSame(0, (int) solution3.getChromosomesBytes().get(0)[1]);
+        Assert.assertSame(1, (int) solution3.getChromosomesBytes().get(0)[2]);
+        Assert.assertSame(0, (int) solution3.getChromosomesBytes().get(0)[3]);
     }
 }
